changing the sorting method
